# ClipySave

./: ClipySave.py  MANIFEST.in  README.md  clipysave.py  deepseek_txt_20260225_626a8c.txt  instagram_simple.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  vk_simple.py  youtube_simple.py
.github/workflows/: publish.yml
ClipySave.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
datas/: Пример.txt
