[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ClipySave"
version = "1.0.0"
description = "Universal Video Downloader for YouTube, Instagram, and VK"
readme = "README.md"
authors = [
    {name = "thetemirbolatov", email = "thetemirbolatov@mirajex.com"}
]
license = "Proprietary"  # Изменено: простая строка вместо таблицы
keywords = ["youtube", "instagram", "vk", "downloader", "video", "download", "clipysave"]  # Добавлено в pyproject.toml

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

requires-python = ">=3.7"
dependencies = [
    "yt-dlp>=2023.0.0",
    "instaloader>=4.9.0",
    "requests>=2.28.0",
]

[project.license]
text = "Proprietary - MIRAJE X"  # Альтернативный способ указания лицензии

[project.urls]
Homepage = "https://github.com/thetemirbolatov-official/ClipySave"
GitHub = "https://github.com/thetemirbolatov-official"
Instagram = "https://instagram.com/thetemirbolatov"
VK = "https://vk.com/thetemirbolatov"
Telegram = "https://t.me/thetemirbolatov"
"Bug Tracker" = "https://github.com/thetemirbolatov-official/ClipySave/issues"

[project.scripts]
clipy-save = "clipysave.clipy_save:main_cli"

[tool.setuptools]
package-dir = {"" = "."}  # Изменено: ищем пакеты в корне
packages = ["clipysave"]  # Явно указываем пакет

[tool.setuptools.package-data]
clipysave = ["datas/*.ico", "datas/*.png"]
