[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ClipySave"
version = "1.0.0"
description = "Universal Video Downloader for YouTube, Instagram, and VK"
readme = "README.md"
authors = [
    {name = "thetemirbolatov", email = "thetemirbolatov@mirajex.com"}
]
license = {text = "Proprietary - MIRAJE X"}  # Исправлено: объединили в одну строку
keywords = ["youtube", "instagram", "vk", "downloader", "video", "download", "clipysave"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

requires-python = ">=3.7"
dependencies = [
    "yt-dlp>=2023.0.0",
    "instaloader>=4.9.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/thetemirbolatov-official/ClipySave"
GitHub = "https://github.com/thetemirbolatov-official"
Instagram = "https://instagram.com/thetemirbolatov"
VK = "https://vk.com/thetemirbolatov"
Telegram = "https://t.me/thetemirbolatov"
"Bug Tracker" = "https://github.com/thetemirbolatov-official/ClipySave/issues"

[project.scripts]
clipy-save = "clipysave.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["clipysave"]

[tool.setuptools.package-data]
clipysave = ["datas/*.ico", "datas/*.png"]
