[metadata]
name = ClipySave
version = 1.0.0
author = thetemirbolatov
author_email = thetemirbolatov@mirajex.com
description = Universal Video Downloader for YouTube, Instagram, and VK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thetemirbolatov-official/ClipySave
keywords = youtube, instagram, vk, downloader, video, download
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Video
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = clipysave
install_requires =
    yt-dlp>=2023.0.0
    instaloader>=4.9.0
    requests>=2.28.0
python_requires = >=3.7

[options.package_data]
clipysave = datas/*.ico, datas/*.png

[options.entry_points]
console_scripts =
    clipy-save = clipysave.clipy_save:main_cli
